# Ready

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE.md  NEWS.md  README.md  THANKS.md  TODO.md
cores/fuse/: ChangeLog  Makefile.am  Makefile.in  PORTING  README  THANKS  aclocal.m4  config.h.in  configure  display.c  display.h  fuse.c  fuse.h  input.c  keyboard.h  loader.c  machine.c  memory_pages.c  memory_pages.h  menu_data.pl  module.c  movie.c  movie.h  periph.c  psg.c  psg.h  rectangle.c  rectangle.h  rzx.c  rzx.h  screenshot.h  settings-header.pl  settings.c  settings.h  settings.pl  slt.c  slt.h  snapshot.h  sound.h  spectrum.c  (+7 more)
cores/fuse/compat/: Makefile.am
cores/fuse/data/: fuse.xml.in
cores/fuse/debugger/: debugger.c  disassemble.c  variable.c
cores/fuse/hacking/: code_beautifiers.txt  input.txt  peripheral_tests.txt  sound.txt  spectranet.txt  tc2048_tech_notes.txt  timer.txt  ui.txt  valgrind.supp
cores/fuse/infrastructure/: Makefile.am  startup_manager.c
cores/fuse/m4/: gtk-2.0.m4  sdl.m4
cores/fuse/machines/: Makefile.am  machines.h  machines_periph.c  pentagon.c  pentagon1024.c  pentagon512.c  scorpion.c  scorpion.h  spec128.h  spec48.c  spec48.h  spec_se.c  specplus3.c  specplus3e.c  tc2068.c
cores/fuse/man/: Makefile.am
cores/fuse/peripherals/: Makefile.am  ay.c  covox.c  dck.c  dck.h  fuller.h  joystick.h  melodik.c  melodik.h  multiface.c  printer.c  printer.h  scld.c  scld.h  speccyboot.h  ula.c  usource.h
cores/fuse/perl/: Fuse.pm
cores/fuse/pokefinder/: Makefile.am  pokemem.h
cores/fuse/roms/: Makefile.am
cores/fuse/sound/: alsasound.c  blipbuffer.h  coreaudiosound.c  hpsound.c  sfifo.c  wiisound.c
cores/fuse/timer/: Makefile.am  sdl.c  timer.c
cores/fuse/ui/: Makefile.am  uidisplay.h  uijoystick.c
cores/fuse/z80/: Makefile.am  z80.c  z80.h  z80_checks.h  z80_ddfd.c  z80_ddfdcb.c  z80_ed.c  z80_macros.h
cores/libspectrum/: Makefile.am  Makefile.in  README  THANKS  accessor.pl  aclocal.m4  bzip2.c  config.h.in  configure.ac  crypto.c  dck.c  generate.pl.in  internals.h  libspectrum.h  libspectrum.qpg.in  make-perl.c  memory.c  plusd.c  pzx_read.c  rzx.c  snap_accessors.txt  tap.c  tape_accessors.pl  tape_block.c  tape_set.c  tape_set.pl  tzx_read.c  utilities.c  wav.c  z80.c  z80em.c  zip.c  zlib.c
cores/libspectrum/myglib/: garray.c  glock.c
cores/libspectrum/test/: complete-tzx.pl  edges.c  empty-drb.tzx  empty.csw  empty.szx  empty.z80  invalid-archiveinfo.tzx  invalid-hardwareinfo.tzx  invalid-warajevo-blockoffset.tap  invalid.tzx  jump.tzx  loop2.tzx  loopend.tzx  no-pilot-gdb.tzx  test.h  turbo-zeropilot.tzx  writeprotected.mdr  zero-tail.pzx
fuse/: INSTALL  bitmap.h  compat.h  config.h  configure.ac  display.c  event.c  event.h  fuse.c  fuse.h  input.h  keyboard.c  keyboard.h  keysyms.pl  loader.h  machine.c  machine.h  mempool.c  mempool.h  menu.c  menu.h  module.h  movie.c  movie_tables.h  options.h  periph.h  phantom_typist.c  phantom_typist.h  profile.c  profile.h  screenshot.c  settings.c  settings.pl  snapshot.c  sound.c  spectrum.h  uidisplay.c  utils.c  utils.h
fuse/compat/: dirname.c  getopt.c  getopt.h  getopt1.c
fuse/compat/amiga/: osname.c
fuse/compat/unix/: dir.c  paths.c  tuntap.c
fuse/compat/wii/: timer.c
fuse/compat/win32/: osname.c  timer.c
fuse/data/: Makefile.am  fuse.desktop.in
fuse/data/shell-completion/: diff_options.sh
fuse/data/win32/: distribution.mk  fuse.manifest.in
fuse/debugger/: Makefile.am  breakpoint.c  breakpoint.h  command.c  commandl.c  commandl.l  commandy.c  commandy.h  commandy.y  debugger.h  debugger_internals.h  event.c  expression.c  system_variable.c
fuse/hacking/: Makefile.am  coding_style.txt  cvs-tags  implementation_notes.txt  uncrustify.cfg
fuse/infrastructure/: startup_manager.c  startup_manager.h
fuse/lib/: Makefile.am
fuse/lib/tests/: idedos-success.hdf.bz2  success.mgt.bz2  success.opd
fuse/machines/: machines_periph.h  pentagon.h  spec128.c  spec16.c  spec48_ntsc.c  specplus2.c  specplus2a.c  specplus3.h  tc2048.c  tc2068.h  ts2068.c
fuse/man/: fuse.1
fuse/peripherals/: ay.h  covox.h  fuller.c  if1.c  if1.h  if2.c  if2.h  joystick.c  kempmouse.c  kempmouse.h  multiface.h  speccyboot.c  specdrum.c  specdrum.h  spectranet.c  spectranet.h  ula.h  usource.c
fuse/peripherals/disk/: beta.c  crc.c  didaktik.h  disciple.h  disk.c  fdd.h  opus.c  plusd.h  upd_fdc.c  upd_fdc.h
fuse/peripherals/flash/: am29f010.c
fuse/peripherals/ide/: divide.h  divmmc.c  ide.c  simpleide.c  zxatasp.c
fuse/peripherals/nic/: enc28j60.h  w5100.c  w5100.h  w5100_internals.h
fuse/perl/: Makefile.am  cpp-perl.pl
fuse/perl/Fuse/: Dialog.pm
fuse/pokefinder/: pokefinder.c  pokefinder.h  pokemem.c
fuse/sound/: Makefile.am  aosound.c  blipbuffer.c  dxsound.c  iossound.c  nullsound.c  osssound.c  sdlsound.c  sfifo.h  sunsound.c  win32sound.c
fuse/timer/: native.c  timer.h
fuse/ui/: ui.h  uijoystick.h  uimedia.h
fuse/ui/fb/: fbdisplay.h  fbkeyboard.h  fbmouse.c  fbui.c  keysyms.c
fuse/ui/gtk/: binary.c  confirm.c  debugger.c  fileselector.c  gtkcompat.h  gtkkeyboard.c  gtkmouse.c  gtkui.c  memory_gtk2.c  menu_data.c  options.pl
fuse/ui/ios/: ui-ios.c
fuse/ui/null/: Makefile.am  options-header.pl  options.c  options.pl
fuse/ui/scaler/: Makefile.am  scaler.c  scaler.h  scaler_hq3x.c  scaler_internals.h
fuse/ui/sdl/: Makefile.am  keysyms.c  sdldisplay.c  sdldisplay.h  sdlui.c
fuse/ui/svga/: Makefile.am  keysyms.c  svgadisplay.c  svgadisplay.h
fuse/ui/widget/: browse.c  error.c  memory.c  menu.c  menu_data.c  options.c  picture.c  pokemem.c  roms.c  select.c  text.c  widget.c  widget_internals.h
fuse/ui/wii/: keysyms.c  wiidisplay.h  wiijoystick.c  wiikeysyms.h  wiimouse.c  wiiui.c
fuse/ui/win32/: Makefile.am  (+23 more)
fuse/unittests/: Makefile.am  unittests.c  unittests.h
fuse/z80/: coretest.c  opcodes_base.c  z80.pl  z80_cb.c  z80_debugger_variables.c  z80_internals.h  z80_ops.c
libspectrum/test/: Makefile.am  invalid-custominfo.tzx  invalid-gdb.tzx  invalid.szx  loop.tzx  plus3.z80  random.szx  standard-tap.tap  szx.c  test.c  test_edges.c
(+1277 files in other folders)
